--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
       rel="stylesheet"
     />
     <title>Home Work</title>
+    <link rel="stylesheet" href="./styles/common.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo header"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <ul>
+        <ul class="nav">
           <li>
             <a href="./index.html">Студия</a>
           </li>
@@ -28,7 +29,7 @@
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="footer-adress">
         <li>
           <a href="malito:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -38,17 +39,18 @@
     <!-- main -->
     <main>
       <!-- Hero -->
-
-      <section>
-        <h1>Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button" id="orderServices">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <button type="button" id="orderServices" class="hero-btn">
+          Заказать услугу
+        </button>
         <!-- <a href="#">Заказать услугу</a> -->
       </section>
 
       <!-- description -->
-      <section>
-        <h2>Our advantages</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Our advantages</h2>
+        <ul class="list-description">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -80,8 +82,8 @@
         </ul>
       </section>
       <!-- what we doing -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -105,9 +107,9 @@
         </ul>
       </section>
       <!-- about -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section section-bg">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list-description">
           <li>
             <img
               src="./image/img.jpg"
@@ -154,7 +156,9 @@
     <!-- footer -->
     <footer>
       <!-- <a href="/"> <img src="./image/logo.webp" alt="Logo" /></a> -->
-      <a href="/" class="logo"><span class="logo-web">Web</span>Studio</a>
+      <a href="/" class="logo footer"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
         г. Киев, пр-т Леси Украинки, 26<br />
         <a href="malito:info@devstudio.com">info@devstudio.com </a><br />
