--- a/portfolio.html
+++ b/portfolio.html
@@ -18,106 +18,121 @@
     <!-- header -->
     <header>
       <nav>
+        <!-- Logo header -->
         <a href="./index.html" class="logo header"
           ><span class="logo-web">Web</span>Studio</a
         >
+        <!-- navigation link -->
         <ul class="nav">
-          <li>
-            <a href="./index.html">Студия</a>
-          </li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a class="nav-item" href="./index.html">Студия</a></li>
+          <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-item" href="#">Контакты</a></li>
         </ul>
+        <!-- contact header -->
       </nav>
-      <ul class="footer-adress">
+      <ul class="contact header">
         <li>
-          <a href="malito:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-mail" href="malito:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact-phone" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!-- main -->
     <main>
+      <h1>Portfolio</h1>
+
       <!-- filter -->
+
       <div>
         <ul class="filter-btn">
-            <li><button class="item-filter" type="button">Все</button></li>
-            <li><button class="item-filter" type="button">Веб-сайты</button></li>
-            <li><button class="item-filter" type="button">Приложения</button></li>
-            <li><button class="item-filter" type="button">Дизайн</button></li>
-            <li><button class="item-filter" type="button">Маркетинг</button></li>
+            <li><button class="button" type="button">Все</button></li>
+            <li><button class="button" type="button">Веб-сайты</button></li>
+            <li><button class="button" type="button">Приложения</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
         </ul>
       </div>
 
       <!-- site -->
-
+      
       <ul class="exampl-list">
       <li class="exampl-item">
-        <img src="./image/imgp1.jpg" alt="Технокряк" width="370" height="294"/>
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
+        <a href="#"><img src="./image/imgp1.jpg" alt="Технокряк" width="370" height="294"/>
+          <h2>Технокряк</h3>
+          <p>Веб-сайт</p></a>
         </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294"/>
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
+        <a href="#"><img src="./image/imgp2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294"/>
+          <h2>Постер New Orlean vs Golden Star</h3>
+          <p>Дизайн</p></a>
       </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp3.jpg" alt="Ресторан Seafood" width="370" height="294"/>
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
+        <a href="#"><img src="./image/imgp3.jpg" alt="Ресторан Seafood" width="370" height="294"/>
+          <h2>Ресторан Seafood</h3>
+          <p>Приложение</p></a>
        </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp4.jpg" alt="Проект Prime" width="370" height="294"/>
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
+        <a href="#"><img src="./image/imgp4.jpg" alt="Проект Prime" width="370" height="294"/>
+          <h2>Проект Prime</h3>
+          <p>Маркетинг</p></a>
        </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp5.jpg" alt="Проект Boxes " width="370" height="294"/>
-          <h3>Проект Boxes</h3>
-          <p>Приложение</p>
+        <a href="#"><img src="./image/imgp5.jpg" alt="Проект Boxes " width="370" height="294"/>
+          <h2>Проект Boxes</h3>
+          <p>Приложение</p></a>
      </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp6.jpg" alt="Inspiration has no Borders " width="370" height="294"/>
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
+        <a href="#"><img src="./image/imgp6.jpg" alt="Inspiration has no Borders " width="370" height="294"/>
+          <h2>Inspiration has no Borders</h3>
+          <p>Веб-сайт</p></a>
       </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp7.jpg" alt="Издание Limited Edition " width="370" height="294"/>
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
+        <a href="#"><img src="./image/imgp7.jpg" alt="Издание Limited Edition " width="370" height="294"/>
+          <h2>Издание Limited Edition</h3>
+          <p>Дизайн</p></a>
       </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp8.jpg" alt="Проект LAB " width="370" height="294"/>
-          <h3>Проект LAB</h3>
-          <p>Маркетин</p>
+        <a href="#"><img src="./image/imgp8.jpg" alt="Проект LAB " width="370" height="294"/>
+          <h2>Проект LAB</h3>
+          <p>Маркетин</p></a>
       </li>
 
       <li class="exampl-item">
-        <img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294"/>
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
+        <a href="#"><img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294"/>
+          <h2>Growing Business</h3>
+          <p>Приложение</p></a>
        </li>
 
       </ul>
     </main>
     <!-- footer -->
     <footer>
-      <!-- <a href="/"> <img src="./image/logo.webp" alt="Logo" /></a> -->
+      <!-- logo footer -->
       <a href="/" class="logo footer"
         ><span class="logo-web">Web</span>Studio</a
       >
-      <address>
-        г. Киев, пр-т Леси Украинки, 26<br />
-        <a href="malito:info@devstudio.com">info@devstudio.com </a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <!-- contacts footer -->
+      <address class="contact footer">
+        <span class="contact-addres">
+          г. Киев, пр-т Леси Украинки, 26<br
+        /></span>
+        <a class="contact-mail" href="malito:info@devstudio.com"
+          >info@devstudio.com </a
+        ><br />
+        <a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
