--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <title>portfolio</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./styles/common.css" />
     <link rel="stylesheet" href="./styles/portfolio.css" />
-    <title>portfolio</title>
+    
 
   <body>
     <!-- header -->
@@ -64,55 +68,55 @@
       <ul class="exampl-list">
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp1.jpg" alt="Технокряк" width="370" height="294"/>
-          <h2>Технокряк</h3>
+          <h2>Технокряк</h2>
           <p>Веб-сайт</p></a>
         </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294"/>
-          <h2>Постер New Orlean vs Golden Star</h3>
+          <h2>Постер New Orlean vs Golden Star</h2>
           <p>Дизайн</p></a>
       </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp3.jpg" alt="Ресторан Seafood" width="370" height="294"/>
-          <h2>Ресторан Seafood</h3>
+          <h2>Ресторан Seafood</h2>
           <p>Приложение</p></a>
        </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp4.jpg" alt="Проект Prime" width="370" height="294"/>
-          <h2>Проект Prime</h3>
+          <h2>Проект Prime</h2>
           <p>Маркетинг</p></a>
        </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp5.jpg" alt="Проект Boxes " width="370" height="294"/>
-          <h2>Проект Boxes</h3>
+          <h2>Проект Boxes</h2>
           <p>Приложение</p></a>
      </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp6.jpg" alt="Inspiration has no Borders " width="370" height="294"/>
-          <h2>Inspiration has no Borders</h3>
+          <h2>Inspiration has no Borders</h2>
           <p>Веб-сайт</p></a>
       </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp7.jpg" alt="Издание Limited Edition " width="370" height="294"/>
-          <h2>Издание Limited Edition</h3>
+          <h2>Издание Limited Edition</h2>
           <p>Дизайн</p></a>
       </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp8.jpg" alt="Проект LAB " width="370" height="294"/>
-          <h2>Проект LAB</h3>
+          <h2>Проект LAB</h2>
           <p>Маркетин</p></a>
       </li>
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294"/>
-          <h2>Growing Business</h3>
+          <h2>Growing Business</h2>
           <p>Приложение</p></a>
        </li>
 
