--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       rel="stylesheet"
     />
     <title>Home Work</title>
-    <!-- <link rel="stylesheet" href="./styles/normalize.css" /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./styles/common.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
