--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!-- footer -->
     <footer>
       <!-- logo footer -->
-      <a href="/" class="logo footer"
+      <a href="./index.html" class="logo footer"
         ><span class="logo-web">Web</span>Studio</a
       >
       <!-- contacts footer -->
