--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./styles/common.css" />
-    <link rel="stylesheet" href="./styles/portfolio.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     
 
   <body>
@@ -125,7 +125,7 @@
     <!-- footer -->
     <footer>
       <!-- logo footer -->
-      <a href="/" class="logo footer"
+      <a href="./index.html" class="logo footer"
         ><span class="logo-web">Web</span>Studio</a
       >
       <!-- contacts footer -->
