--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp6.jpg" alt="Inspiration has no Borders " width="370" height="294"/>
-          <h2>Inspiration has no Borders</h2>
+          <h2 lang="en">Inspiration has no Borders</h2>
           <p>Веб-сайт</p></a>
       </li>
 
@@ -116,7 +116,7 @@
 
       <li class="exampl-item">
         <a href="#"><img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294"/>
-          <h2>Growing Business</h2>
+          <h2 lang="en">Growing Business</h2>
           <p>Приложение</p></a>
        </li>
 
