--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Home Work</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./styles/common.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
@@ -21,97 +21,89 @@
   <body>
     <!-- header -->
     <header>
-      <nav>
-        <!-- Logo header -->
-        <a href="./index.html" class="logo header"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <!-- navigation link -->
-        <ul class="nav">
-          <li><a class="nav-item" href="./index.html">Студия</a></li>
-          <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-item" href="#">Контакты</a></li>
-        </ul>
+      <div class="page-header">
+        <nav class="page-nav">
+          <!-- Logo header -->
+          <a href="./index.html" class="logo header" lang="en"
+            >Web<span class="logo-web">Studio</span>
+          </a>
+          <!-- navigation link -->
+          <ul class="menu">
+            <li><a class="menu-item" href="./index.html">Студия</a></li>
+            <li><a class="menu-item" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="menu-item" href="#">Контакты</a></li>
+          </ul>
+        </nav>
+
         <!-- contact header -->
-      </nav>
-      <ul class="contact header">
-        <li>
-          <a class="contact-mail" href="malito:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-phone" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+
+        <ul class="contact header">
+          <li>
+            <a class="contact-mail" href="malito:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <!-- main -->
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title uppertext">
-          Эффективные решения<br />для вашего бизнеса
-        </h1>
-        <button type="button" id="orderServices" class="hero-btn">
-          Заказать услугу
-        </button>
+        <div class="page-hero">
+          <h1 class="hero-title uppertext">
+            Эффективные решения
+            <br />
+            для вашего бизнеса
+          </h1>
+          <div class="btn">
+            <button type="button" id="orderServices" class="hero-btn">Заказать услугу</button>
+          </div>
+        </div>
       </section>
 
       <!-- advantages -->
       <section class="section">
-        <h2 class="section-title">Наши преимущества</h2>
-        <ul class="list-description">
-          <li>
-            <h3 class="uppertext">Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="uppertext">Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="uppertext">Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="uppertext">Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div>
+          <h2 hidden class="advantages-title">Наши преимущества</h2>
+          <ul class="list-advantages">
+            <li>
+              <h3 class="advan uppertext">Внимание к деталям</h3>
+              <p class="advan-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="advan uppertext">Пунктуальность</h3>
+              <p class="advan-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="advan uppertext">Планирование</h3>
+              <p class="advan-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="advan uppertext">Современные технологии</h3>
+              <p class="advan-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- what we doing -->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img
-              src="./image/box.jpg"
-              alt="создание кода"
-              width="370"
-              height="294"
-            />
+            <img src="./image/box.jpg" alt="создание кода" width="370" height="294" />
           </li>
           <li>
-            <img
-              src="./image/box2.jpg"
-              alt="создание приложения"
-              width="370"
-              height="294"
-            />
+            <img src="./image/box2.jpg" alt="создание приложения" width="370" height="294" />
           </li>
           <li>
             <img src="./image/box3.jpg" alt="дизайн" width="370" height="294" />
@@ -119,48 +111,28 @@
         </ul>
       </section>
       <!-- persons -->
-      <section class="section section-bg">
+      <section class="section section-persons">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="list-description">
+        <ul class="list-persons">
           <li>
-            <img
-              src="./image/img.jpg"
-              alt="фотография Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <img src="./image/img.jpg" alt="фотография Игорь Демьяненко" width="270" height="260" />
+            <h3 class="persons-name">Игорь Демьяненко</h3>
+            <p class="persons-item" lang="en">Product Designer</p>
           </li>
           <li>
-            <img
-              src="./image/img1.jpg"
-              alt="фотография Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <img src="./image/img1.jpg" alt="фотография Ольга Репина" width="270" height="260" />
+            <h3 class="persons-name">Ольга Репина</h3>
+            <p class="persons-item" lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./image/img2.jpg"
-              alt="фотография Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <img src="./image/img2.jpg" alt="фотография Николай Тарасов" width="270" height="260" />
+            <h3 class="persons-name">Николай Тарасов</h3>
+            <p class="persons-item" lang="en">Marketing</p>
           </li>
           <li>
-            <img
-              src="./image/img3.jpg"
-              alt="фотография Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <img src="./image/img3.jpg" alt="фотография Михаил Ермаков" width="270" height="260" />
+            <h3 class="persons-name">Михаил Ермаков</h3>
+            <p class="persons-item" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -168,30 +140,23 @@
     <!-- footer -->
     <footer>
       <!-- logo footer -->
-      <a href="./index.html" class="logo footer"
-        >Web<span class="logo-web">Studio</span></a
-      >
-
-      <!-- contacts footer -->
-      <address class="contact footer">
-        <ul>
-          <li>
-            <span class="contact-addres">
-              г. Киев, пр-т Леси Украинки, 26<br
-            /></span>
-          </li>
-          <li>
-            <a class="contact-mail" href="malito:info@devstudio.com"
-              >info@devstudio.com </a
-            ><br />
-          </li>
-          <li>
-            <a class="contact-phone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="page-footer">
+        <a href="./index.html" class="logo footer">Web<span class="logo-web">Studio</span> </a>
+        <!-- contacts footer -->
+        <address class="contact footer">
+          <ul>
+            <li>
+              <span class="contact-addres">г. Киев, пр-т Леси Украинки, 26</span>
+            </li>
+            <li>
+              <a class="contact-mail" href="malito:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
