--- a/portfolio.html
+++ b/portfolio.html
@@ -1,143 +1,156 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <title>portfolio</title>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-    <link rel="stylesheet" href="./styles/common.css" />
-    <link rel="stylesheet" href="./styles/styles.css" />
-    
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<title>portfolio</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+		/>
+		<link rel="stylesheet" href="./styles/common.css" />
+		<link rel="stylesheet" href="./styles/styles.css" />
+	</head>
 
-  <body>
-    <!-- header -->
-    <header>
-      <nav>
-        <!-- Logo header -->
-        <a href="./index.html" class="logo header"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <!-- navigation link -->
-        <ul class="nav">
-          <li><a class="nav-item" href="./index.html">Студия</a></li>
-          <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-item" href="#">Контакты</a></li>
-        </ul>
-        <!-- contact header -->
-      </nav>
-      <ul class="contact header">
-        <li>
-          <a class="contact-mail" href="malito:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-phone" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </header>
-    <!-- main -->
-    <main>
-      <h1>Portfolio</h1>
+	<body>
+		<!-- header -->
+		<header class="page-header">
+			<nav>
+				<!-- Logo header -->
+				<a href="./index.html" class="logo header">
+					Web
+					<span class="logo-web">Studio</span>
+				</a>
+				<!-- navigation link -->
+				<ul class="nav">
+					<li><a class="nav-item" href="./index.html">Студия</a></li>
+					<li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
+					<li><a class="nav-item" href="#">Контакты</a></li>
+				</ul>
+				<!-- contact header -->
+			</nav>
+			<ul class="contact header">
+				<li>
+					<a class="contact-mail" href="malito:info@devstudio.com">info@devstudio.com</a>
+				</li>
+				<li>
+					<a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+				</li>
+			</ul>
+		</header>
+		<!-- main -->
+		<main>
+			<h1 hidden>Portfolio</h1>
 
-      <!-- filter -->
+			<!-- filter -->
 
-      <div>
-        <ul class="filter-btn">
-            <li><button class="button" type="button">Все</button></li>
-            <li><button class="button" type="button">Веб-сайты</button></li>
-            <li><button class="button" type="button">Приложения</button></li>
-            <li><button class="button" type="button">Дизайн</button></li>
-            <li><button class="button" type="button">Маркетинг</button></li>
-        </ul>
-      </div>
+			<div>
+				<ul class="filter-btn">
+					<li><button class="button" type="button">Все</button></li>
+					<li><button class="button" type="button">Веб-сайты</button></li>
+					<li><button class="button" type="button">Приложения</button></li>
+					<li><button class="button" type="button">Дизайн</button></li>
+					<li><button class="button" type="button">Маркетинг</button></li>
+				</ul>
+			</div>
 
-      <!-- site -->
-      
-      <ul class="exampl-list">
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp1.jpg" alt="Технокряк" width="370" height="294"/>
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p></a>
-        </li>
+			<!-- site -->
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294"/>
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p></a>
-      </li>
+			<ul class="exampl-list">
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp1.jpg" alt="Технокряк" width="370" height="294" />
+						<h2>Технокряк</h2>
+						<p>Веб-сайт</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp3.jpg" alt="Ресторан Seafood" width="370" height="294"/>
-          <h2>Ресторан Seafood</h2>
-          <p>Приложение</p></a>
-       </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+						<h2>Постер New Orlean vs Golden Star</h2>
+						<p>Дизайн</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp4.jpg" alt="Проект Prime" width="370" height="294"/>
-          <h2>Проект Prime</h2>
-          <p>Маркетинг</p></a>
-       </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp3.jpg" alt="Ресторан Seafood" width="370" height="294" />
+						<h2>Ресторан Seafood</h2>
+						<p>Приложение</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp5.jpg" alt="Проект Boxes " width="370" height="294"/>
-          <h2>Проект Boxes</h2>
-          <p>Приложение</p></a>
-     </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp4.jpg" alt="Проект Prime" width="370" height="294" />
+						<h2>Проект Prime</h2>
+						<p>Маркетинг</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp6.jpg" alt="Inspiration has no Borders " width="370" height="294"/>
-          <h2 lang="en">Inspiration has no Borders</h2>
-          <p>Веб-сайт</p></a>
-      </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp5.jpg" alt="Проект Boxes " width="370" height="294" />
+						<h2>Проект Boxes</h2>
+						<p>Приложение</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp7.jpg" alt="Издание Limited Edition " width="370" height="294"/>
-          <h2>Издание Limited Edition</h2>
-          <p>Дизайн</p></a>
-      </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp6.jpg" alt="Inspiration has no Borders " width="370" height="294" />
+						<h2 lang="en">Inspiration has no Borders</h2>
+						<p>Веб-сайт</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp8.jpg" alt="Проект LAB " width="370" height="294"/>
-          <h2>Проект LAB</h2>
-          <p>Маркетин</p></a>
-      </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp7.jpg" alt="Издание Limited Edition " width="370" height="294" />
+						<h2>Издание Limited Edition</h2>
+						<p>Дизайн</p>
+					</a>
+				</li>
 
-      <li class="exampl-item">
-        <a href="#"><img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294"/>
-          <h2 lang="en">Growing Business</h2>
-          <p>Приложение</p></a>
-       </li>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp8.jpg" alt="Проект LAB " width="370" height="294" />
+						<h2>Проект LAB</h2>
+						<p>Маркетин</p>
+					</a>
+				</li>
 
-      </ul>
-    </main>
-    <!-- footer -->
-    <footer>
-      <!-- logo footer -->
-      <a href="./index.html" class="logo footer"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-      <!-- contacts footer -->
-      <address class="contact footer">
-        <span class="contact-addres">
-          г. Киев, пр-т Леси Украинки, 26<br
-        /></span>
-        <a class="contact-mail" href="malito:info@devstudio.com"
-          >info@devstudio.com </a
-        ><br />
-        <a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
-    </footer>
-  </body>
+				<li class="exampl-item">
+					<a href="#">
+						<img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294" />
+						<h2 lang="en">Growing Business</h2>
+						<p>Приложение</p>
+					</a>
+				</li>
+			</ul>
+		</main>
+		<!-- footer -->
+		<footer>
+			<!-- logo footer -->
+			<a href="./index.html" class="logo footer">
+				Web
+				<span class="logo-web">Studio</span>
+			</a>
+			<!-- contacts footer -->
+			<address class="contact footer">
+				<span class="contact-addres">г. Киев, пр-т Леси Украинки, 26</span>
+				<a class="contact-mail" href="malito:info@devstudio.com">info@devstudio.com</a>
+
+				<a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+			</address>
+		</footer>
+	</body>
 </html>
